--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -31,7 +31,7 @@
     right: -110px;
     width: 300px;
     height: 300px;
-    background: radial-gradient(#44006b, #ad1fff);
+    background: radial-gradient(#5f148b, #ad1fff);
     overflow: hidden;
   }
   .bg-glass {
